force-app/main/default/objects/Cell_Color_Setting__mdt/Cell_Color_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Cell Color Setting</label>
    <pluralLabel>Cell Color Settings</pluralLabel>
</CustomObject>