force-app/main/default/objects/Cell_Color_Setting__mdt/fields/Column_Setting__c.field-meta.xml
<CustomField>
    <fullName>Column_Setting__c</fullName>
    <label>Column Setting</label>
    <referenceTo>Column_Setting__mdt</referenceTo>
    <relationshipLabel>Cell Color Settings</relationshipLabel>
    <relationshipName>Cell_Color_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>