force-app/main/default/objects/Cell_Color_Setting__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>less than</fullName>
                <default>true</default>
                <label>less than</label>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>equal to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>