force-app/main/default/objects/Cell_Color_Setting__mdt/fields/Data_Value__c.field-meta.xml
<CustomField>
    <fullName>Data_Value__c</fullName>
    <label>Data Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>